Fix figure caption alignment

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -147,6 +147,9 @@ figure {
         width: calc(50% - 0.5em);
       }
     }
+    figcaption {
+      width: 100%;
+    }
   }
   &.third {
     > a,
@@ -154,6 +157,9 @@ figure {
       @include breakpoint($small) {
         width: calc(33.3333% - 0.5em);
       }
+    }
+    figcaption {
+      width: 100%;
     }
   }
 }
